simple-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-api-svc
  namespace: simple-api
  labels:
    app: simple-api-svc
spec:
  selector:
    app: simple-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
