vmagent-svc.yaml
# vmagent-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vmagent
  namespace: monitoring
spec:
  selector:
    app.kubernetes.io/name: vmagent
  ports:
    - name: http
      port: 8429
      targetPort: 8429
